--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -15,6 +15,15 @@ a:hover {
   text-decoration: underline;
 }
 
+.wy-nav-top {
+  background-color: #464acb;
+}
+
+.wy-nav-top a {
+  color: white;
+  text-decoration: none !important;
+}
+
 .wy-nav-side {
   background-color: #595cd0;
 }
