--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -50,7 +50,7 @@ a:hover {
 
 .wy-side-nav-search > a::after {
   display: inline-block;
-  content: "SDK";
+  content: "| SDK";
   letter-spacing: -1px;
 }
 
